--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "server/index.js",
   "scripts": {
+    "server": "node dist/index.js",
+    "build": "cd server && tsc",
+    "start": "npm run build & npm run server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
