--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "server/index.js",
   "scripts": {
+    "install": "cd server && npm i",
     "server": "node dist/index.js",
     "build": "cd server && tsc",
-    "start": "npm run build & npm run server",
+    "start": "npm run build && npm run server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
