--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11"
+    "@types/express": "^4.17.11",
+    "@types/node": "^14.0.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
