--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "server/index.js",
   "scripts": {
-    "install": "cd server && npm i",
+    "i": "npm i && cd server && npm i",
     "server": "node dist/index.js",
     "build": "cd server && tsc",
-    "start": "npm run build && npm run server",
+    "start": "npm run build && TZ='UTC' npm run server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,5 +19,11 @@
   "bugs": {
     "url": "https://github.com/Oramaramerdman/wap-proj2/issues"
   },
-  "homepage": "https://github.com/Oramaramerdman/wap-proj2#readme"
+  "homepage": "https://github.com/Oramaramerdman/wap-proj2#readme",
+  "dependencies": {
+    "country-code-lookup": "0.0.19",
+    "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.5.0"
+  }
 }
