--- a/server/package.json
+++ b/server/package.json
@@ -4,15 +4,15 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "https": "^1.0.0"
   },
   "devDependencies": {
+    "@types/country-code-lookup": "0.0.0",
     "@types/express": "^4.17.11",
     "@types/node": "^14.0.4"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "author": "",
   "license": "ISC"
 }
