--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Oramaramerdman/wap-proj2#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "country-code-lookup": "0.0.19",
     "express": "^4.17.1",
     "reflect-metadata": "^0.1.13",
