--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "country-code-lookup": "0.0.19",
     "express": "^4.17.1",
+    "node-cron": "^3.0.0",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.5.0"
   }
