--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,15 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "https": "^1.0.0"
+    "https": "^1.0.0",
+    "node-cron": "^3.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/country-code-lookup": "0.0.0",
     "@types/express": "^4.17.11",
-    "@types/node": "^14.0.4"
+    "@types/node": "^14.0.4",
+    "@types/node-cron": "^2.0.3"
   },
   "scripts": {},
   "author": "",
