Add script for JSDoc documentation generation

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "server": "node dist/index.js",
     "build": "cd server && tsc",
     "start": "npm run build && TZ='UTC' npm run server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "doc": "npm run build && jsdoc ./dist -r -d ./doc/gen README.md"
   },
   "repository": {
     "type": "git",
